# fenlu

./: .gitignore  Cargo.toml  README.md  build.rs  bump-protocol-version.sh  flake.nix  go.mod  go.sum  main.go  processors.go  sinks.go  sources.go  todo.md
.jjconflict-base-0/: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  todo.md
.jjconflict-base-0/nodes/: source-directory.py
.jjconflict-base-0/protocol/: request.go  source.go  transform.go
.jjconflict-base-0/qml/: Media.qml  MediaBackground.qml  MediaDetails.qml  MediaList.qml  Queries.qml  Topbar.qml  main.qml
.jjconflict-base-0/scripts/: common.py  config-nginx-transform-proxy.conf  directory-source.fnl  filter-image-size.py  filter-tags.py  image-size-filter.fnl  proxy-transform-nginx.conf  proxy-transform.fnl  source-directory  source-pixiv.py  transform-proxy  transform-proxy.py
.jjconflict-base-0/sources/: directory.py
.jjconflict-base-0/src/: config.rs  main.rs  pipeline.rs  script.rs  utils.rs
.jjconflict-base-0/src/pipeline/: fennel.rs  sources.rs  transforms.rs
.jjconflict-base-0/src/protocol/: capabilities.rs
.jjconflict-base-0/src/qml/: CustomScrollGridView.qml
.jjconflict-base-0/src/qt/: interface.rs  media.rs  pipeline.rs
.jjconflict-base-1/: .gitignore  Cargo.toml  build.rs  default.nix  main.go  todo.md
.jjconflict-base-1/nodes/: source-directory.py
.jjconflict-base-1/protocol/: filter.go  response.go  sink.go  source.go
.jjconflict-base-1/qml/: Media.qml  MediaDetails.qml  MediaList.qml  Queries.qml  main.qml
.jjconflict-base-1/scripts/: filter-sqlite.py  filter-tags.py  source-directory.py  source-pixiv.py  transform-proxy.py  transform-tags
.jjconflict-side-0/: Cargo.toml  build.rs  flake.nix  go.mod  todo.md
.jjconflict-side-1/: .gitignore  Cargo.toml  build.rs  default.nix  flake.nix  test-server.py  todo.md
.jjconflict-side-2/: .gitignore  Cargo.toml  flake.nix  main.go  todo.md
cli/: .gitignore  Cargo.toml
cli/src/: args.rs  main.rs  metadata.rs
cli/src/scripts/: filters.rs  sources.rs  transforms.rs
common/: config.go  logger.go
config/: config.go  logger.go
media/: essential.go  extra.go  media.go  node.go  type.go
node/: base.go  command.go  filter.go  node.go  request.go  sink.go  source.go  transform.go
nodes/: common.py  filter-image-size.py  filter-tags.py  nginx-transform-proxy.conf  sink-frontend.sh  sink-print.py  sink-sqlite.py  sink-text.py  source-directory.py  source-gelbooru.py  source-pixiv.py  source-sqlite.py  transform-proxy.py  transform-romaji.py  transform-thumbnail.py
nodes/sink-frontend/: Cargo.toml  build.rs
nodes/sink-frontend/qml/: ActionsContextMenu.qml  CustomScrollGridView.qml  Media.qml  MediaBackground.qml  MediaDetails.qml  main.qml
nodes/sink-frontend/src/: config.rs  initialize.rs  main.rs  media.rs  protocol.rs  qt.rs  server.rs  sink.rs
nodes/sink-frontend/src/qt/: actions.rs  media.rs
protocol/: filter.go  initialize.go  request.go  response.go  sink.go  source.go  transform.go  version.go
qml/: ActionsContextMenu.qml  Media.qml  MediaDetails.qml  MediaList.qml  Queries.qml  Topbar.qml  main.qml
qt/: .gitignore  Cargo.toml  build.rs  config.toml  fenlu-qt  fenlu.db  io.github.CelestialCrafter.fenlu.yml
qt/scripts/: directory-source.fnl  image-size-filter.toml  pixiv-nginx.conf  pixiv-source.fnl  proxy-transform-nginx.conf  proxy-transform.fnl
qt/src/: main.rs  objects.rs
qt/src/objects/: media.rs
qt/src/qml/: CustomScroll.qml  CustomScrollGridView.qml  media.qml
scripts/: arxiv-source.fnl  common.py  directory-source.fnl  directory-source.toml  filter-image-size.py  filter-tags  image-size-filter.fnl  kemono-source.fnl  pixiv-source.fnl  proxy-transform-nginx.conf  proxy-transform.fnl  source-arxiv  source-arxiv.py  source-directory  source-kemono  source-pixiv  source-pixiv.py  tag-filter.fnl  test-source.fnl  transform-proxy  transform-proxy.py
src/: config.rs  cxxqt_object.rs  fennel.rs  main.rs  metadata.rs  models.rs  pipeline.rs  protocol.rs  script.rs  scripts.rs  sources.rs  utils.rs
(+125 files in other folders)
