[package]
name = "fenlu"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0.126"
cxx-qt = "0.6.1"
cxx-qt-lib = "0.6.1"
eyre = "0.6.12"
fluent-uri = { version = "0.2.0", features = ["serde"] }
globset = "0.4.14"
mlua = { version = "0.9.9", features = ["lua54", "serialize"] }
pico-args = "0.5.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sqlx = { version = "0.8.1", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.39.3", features = ["macros", "rt", "rt-multi-thread", "sync"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uris = "0.1.1"

[build-dependencies]
cxx-qt-build = { version = "0.6.1", features = ["link_qt_object_files"] }
