[package]
name = "fenlu"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
fluent-uri = { version = "0.2.0", features = ["serde"] }
futures = "0.3.30"
glob = "0.3.1"
iced = { version = "0.13.1", features = ["image", "tokio"] }
open = "5.3.0"
reqwest = "0.12.8"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sqlx = { version = "0.8.1", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.39.3", features = ["macros", "rt", "rt-multi-thread"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4"] }

