[package]
name = "fenlu"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0.128"
cxx-qt = "0.6.1"
cxx-qt-build = { version = "0.6", features = ["link_qt_object_files"] }
cxx-qt-lib = "0.6.1"
dashmap = "6.1.0"
eyre = "0.6.12"
futures = "0.3.30"
once_cell = "1.19.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["macros", "process", "rt", "rt-multi-thread", "sync"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
cxx-qt-build = { version = "0.6", features = [ "link_qt_object_files" ] }
