[package]
name = "fenlu"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0.128"
cxx-qt = "0.6.1"
cxx-qt-lib = "0.6.1"
dashmap = "6.1.0"
eyre = "0.6.12"
fluent-uri = { version = "0.2.0", features = ["serde"] }
futures = "0.3.30"
once_cell = "1.19.0"
open = "5.3.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sqlx = { version = "0.8.1", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.39.3", features = ["macros", "rt", "rt-multi-thread"] }
toml = "0.8.19"
uuid = { version = "1.10.0", features = ["v4"] }

[build-dependencies]
cxx-qt-build = { version = "0.6", features = [ "link_qt_object_files" ] }
