[package]
name = "fenlu-qt"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0.128"
cxx-qt = "0.6.1"
cxx-qt-lib = "0.6.1"
serde_json = "1.0.127"
fenlu-cli = { path = "../cli" }
toml = "0.8.19"
serde = "1.0.209"
once_cell = "1.19.0"

[build-dependencies]
cxx-qt-build = { version = "0.6", features = [ "link_qt_object_files" ] }
