[package]
name = "sink-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
serde = { version = "1.0.214", features = ["serde_derive"] }
serde_json = "1.0.132"
cxx = "1.0.129"
cxx-qt = "0.7.0"
cxx-qt-lib = { version = "0.7.0", features = ["qt_full"] }

[build-dependencies]
cxx-qt-build = { version = "0.7", features = [ "link_qt_object_files" ] }
